Fixed header z-index.

--- a/app/static/custom_css/style.css
+++ b/app/static/custom_css/style.css
@@ -13,6 +13,7 @@ a {
     left: 0;
     top: 0;
     width: 100%;
+    z-index: -1;
 }
 
 .nav-link-custom {
